peac_dev/force-app/main/default/objects/Service_Passthrough__c/Service_Passthrough__c.object-meta.xml
<CustomObject>
    <label>Passthrough</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Passthrough Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Passthrough</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>