peac_dev/force-app/main/default/objects/Service_Passthrough__c/fields/Billed__c.field-meta.xml
<CustomField>
    <fullName>Billed__c</fullName>
    <label>Billed $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>