peac_dev/force-app/main/default/objects/Service_Passthrough__c/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <label>Contract Number</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Passthrough</relationshipLabel>
    <relationshipName>Service_Passthrough</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>