peac_dev/force-app/main/default/objects/Service_Passthrough__c/fields/Coverage_Period_To__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Period_To__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Coverage Period To</label>
    <type>Date</type>
</CustomField>