peac_dev/force-app/main/default/objects/Service_Passthrough__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Service_Passthrough</relationshipName>
    <type>Lookup</type>
</CustomField>