peac_dev/force-app/main/default/objects/Service_Passthrough__c/fields/Customer_Owes__c.field-meta.xml
<CustomField>
    <fullName>Customer_Owes__c</fullName>
    <label>Customer Owes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>