peac_dev/force-app/main/default/objects/Service_Passthrough__c/fields/Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Name__c</fullName>
    <label>Dealer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Service_Passthrough1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>