peac_dev/force-app/main/default/objects/Service_Passthrough__c/fields/Doc_Fee_Dealer_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Doc_Fee_Dealer_Percentage__c</fullName>
    <label>Doc Fee Dealer %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>