peac_dev/force-app/main/default/objects/Service_Passthrough__c/fields/FEID__c.field-meta.xml
<CustomField>
    <fullName>FEID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FEID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>