peac_dev/force-app/main/default/objects/Service_Passthrough__c/fields/Funded_Amount__c.field-meta.xml
<CustomField>
    <fullName>Funded_Amount__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Funded Amount ($)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>