peac_dev/force-app/main/default/objects/Service_Passthrough__c/fields/Funding_Id__c.field-meta.xml
<CustomField>
    <fullName>Funding_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Funding Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>