peac_dev/force-app/main/default/objects/Service_Passthrough__c/fields/Number_of_Renewal_Payments_Received__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Renewal_Payments_Received__c</fullName>
    <label># Renewal Payments Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>