peac_dev/force-app/main/default/objects/Service_Passthrough__c/fields/Payment_Type_Misc_Description__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type_Misc_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type/Misc Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>