peac_dev/force-app/main/default/objects/Service_Passthrough__c/fields/Renewal_Payments_Received__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Payments_Received__c</fullName>
    <label>Renewal Payments Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>