peac_dev/force-app/main/default/objects/Service_Passthrough__c/fields/Waived_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Waived_Paid_Amount__c</fullName>
    <label>Waived + Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>